--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           COMMIT_SHA="${{github.sha}}"
           COMMIT_SHA_SHORT="${COMMIT_SHA:0:7}"
+          COMMIT_SHA_SHORT=$(date -s "${{github.event.head_commit.timestamp}}" +'%Y/%m/%d %H:%M')
 
           JSON_DATA=$(cat << EOF
           {
@@ -35,7 +36,10 @@ jobs:
             "ref": "${{github.ref_name}}",
             "author_email": "${{github.event.head_commit.author.email}}",
             "author_name": "${{github.event.head_commit.author.name}}",
-            "author_username": "${{github.event.head_commit.author.username}}"
+            "author_username": "${{github.event.head_commit.author.username}}",
+            "commit_message": "${{github.event.head_commit.message}}",
+            "commit_url": "${{github.event.head_commit.url}}",
+            "commit_date": "$COMMIT_DATE"
           }
           EOF
           )
