--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           COMMIT_SHA="${{github.sha}}"
           COMMIT_SHA_SHORT="${COMMIT_SHA:0:7}"
-          COMMIT_SHA_SHORT=$(date -s "${{github.event.head_commit.timestamp}}" +'%Y/%m/%d %H:%M')
+          COMMIT_SHA_SHORT=$(date --date="${{github.event.head_commit.timestamp}}" +'%Y/%m/%d %H:%M')
 
           JSON_DATA=$(cat << EOF
           {
