--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -12,39 +12,13 @@ on:
         options: [yes, no]
 
 jobs:
-  Context:
-    name: Context
+  Notify:
+    name: Notify
     runs-on: ubuntu-latest
 
     steps:
-      - name: View github context
-        run: |
-          COMMIT_SHA="${{github.sha}}"
-          COMMIT_SHA_SHORT="${COMMIT_SHA:0:7}"
-          COMMIT_DATE=$(date --date="${{github.event.head_commit.timestamp}}" +'%Y/%m/%d %H:%M')
-
-          JSON_DATA=$(cat << EOF
-          {
-            "job": "${{github.job}}",
-            "event_name": "${{github.event_name}}",
-            "repository": "${{github.repository}}",
-            "run_attempt": ${{github.run_attempt}},
-            "run_number": ${{github.run_number}},
-            "actor": "${{github.actor}}",
-            "workflow": "${{github.workflow}}",
-            "sha": "$COMMIT_SHA",
-            "sha_short": "$COMMIT_SHA_SHORT",
-            "ref": "${{github.ref_name}}",
-            "author_email": "${{github.event.head_commit.author.email}}",
-            "author_name": "${{github.event.head_commit.author.name}}",
-            "author_username": "${{github.event.head_commit.author.username}}",
-            "commit_message": "${{github.event.head_commit.message}}",
-            "commit_url": "${{github.event.head_commit.url}}",
-            "commit_date": "$COMMIT_DATE"
-          }
-          EOF
-          )
-
-          echo "$JSON_DATA" > payload.json
-
-          jq '.' payload.json
+      - name: Show info about built Docker image
+        uses: andyone/pachca-action@master
+        with:
+          webhook: ${{secrets.PACHCA_WEBHOOK}}
+          payload: raw
