--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -2,6 +2,8 @@ name: ACTION
 
 on:
   push:
+    branches: [master, develop]
+  pull_request:
     branches: [master]
   workflow_dispatch:
     inputs:
