--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -18,6 +18,8 @@ jobs:
     name: Notify
     runs-on: ubuntu-latest
 
+    environment: Devel
+
     steps:
       - name: View github context
         run: echo "${{ toJson(github) }}"
