--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -31,4 +31,4 @@ jobs:
           webhook: ${{secrets.PACHCA_WEBHOOK}}
           title: "Deploying backend"
           message: "Building docker image and deploying it to AWS"
-          status: "okay"
+          status: "failure"
