--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -24,6 +24,9 @@ jobs:
       - name: View github context
         run: echo "${{ toJson(github) }}"
 
+      - name: Assignees
+        run: echo "${{ toJson(github) }}" | jq '.'
+
       - name: Show notification to Pachca
         uses: andyone/pachca-action@master
         with:
